# tornado

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  pyproject.toml
ferrite/source/ioc/FerSup/: ao.c
misc/: rpmgs.conf
misc/check/: mypy.sh  yapf.sh
misc/phoebus/: display.bob
misc/systemd/: ioc.service  run_ioc.sh
source/app/: CMakeLists.txt  Cargo.toml  README.md  TODO.md  build.rs
source/app.old/: README.md
source/app.old/real/: CMakeLists.txt  external.cpp
source/app.old/src/: device.hpp  double_buffer.hpp  framework.cpp  handlers.hpp
source/app/fake/: CMakeLists.txt  conanfile.toml  external.cpp
source/app/ioc/: README.md
source/app/ioc/TornadoApp/Db/: Makefile  Tornado.db  ai.substitutions  ai.template  ao.db  debug.db  di.db  do.db
source/app/ioc/TornadoApp/src/: Makefile  TornadoMain.cpp  plugin.cpp
source/app/ioc/iocBoot/iocTornado/: st.cmd
source/app/misc/: ioc.service  run_ioc.sh
source/app/plugin/: CMakeLists.txt  main.cpp
source/app/real/: CMakeLists.txt  external.cpp
source/app/src/: channel.rs  config.rs  device.cpp  device.hpp  device.rs  double_buffer.hpp  epics.rs  external.hpp  framework.cpp  handlers.hpp  lib.rs
source/app/src/channel/: mod.rs  rpmsg.rs
source/app/src/device/: adc.rs  dac.rs  debug.rs  dispatch.rs  mod.rs
source/app/src/utils/: double_vec.rs  mod.rs
source/app/user/: Cargo.toml
source/app/user/src/: epics.rs  lib.rs
source/app/user/src/channel/: mod.rs  rpmsg.rs
source/app/user/src/device/: adc.rs  ai.rs  ao.rs  dac.rs  debug.rs  dio.rs  dispatch.rs  fast.rs  mod.rs
source/app/user/src/utils/: double_vec.rs  misc.rs  mod.rs  stat.rs  tests.rs
source/app/user/src/wf/: real.rs
source/common/: CMakeLists.txt  Cargo.toml
source/common/include/common/: config.h
source/common/src/: config.rs  lib.rs  protocol.rs
source/common/user/: Cargo.toml
source/common/user/src/: config.rs  lib.rs  protocol.rs  units.rs  values.rs
source/fakedev/: Cargo.toml
source/fakedev/src/: dummy.rs  epics.rs  lib.rs  skifio.rs  test.rs
source/ioc/: USAGE.md
source/ioc/FerApp/Db/: devFer.db
source/ioc/PSCApp/Db/: devPSC.db
source/ioc/TornadoApp/Db/: Makefile  Tornado.db
source/ioc/TornadoApp/src/: Makefile
source/ioc/iocBoot/iocTornado/: st.cmd
source/ipp/: CMakeLists.txt
source/ipp/test/: CMakeLists.txt
source/mcu/: CMakeLists.txt  README.md
source/mcu/hal/: CMakeLists.txt
source/mcu/hal/include/hal/: assert.h  gpio.h  gpt.h  io.h  panic.h  rpmsg.h  spi.h
source/mcu/hal/include/hal/platform/: gpio.h  gpt.h  io.h  rpmsg.h  spi.h
source/mcu/hal/src/: io.c  panic.c  rpmsg.c  time.c
source/mcu/hal/src/imx8mn/: rpmsg.c
source/mcu/hal/src/platform/: gpio.c  gpt.c  io.c  rpmsg.c  spi.c
source/mcu/main/: CMakeLists.txt  flags.cmake
source/mcu/main/src/: TODO.md  main.c
source/mcu/main/src/common/: config.h
source/mcu/main/src/device/: FreeRTOSConfig.h  board.h  freertos_impl.c
source/mcu/main/src/drivers/: skifio.c  skifio.h  sync.c  sync.h  wf.c  wf.h
source/mcu/main/src/tasks/: rpmsg.h  sync.h
source/mcu/main/src/utils/: ringbuf.inl
source/mcu/src/: TODO.md  main.c  skifio.c  stats.c  sync.c
source/mcu/src/device/: board.c
source/mcu/src/drivers/: skifio.c  skifio.h
source/mcu/src/tasks/: config.h  control.c  control.h  rpmsg.c  rpmsg.h  stats.c  stats.h  sync.c  sync.h
source/mcu/src/utils/: crc.c  macros.h  ringbuf.c  ringbuf.h
source/mcu/user/: Cargo.toml
source/mcu/user/src/: buffers.rs  control.rs  error.rs  hal.rs  io.rs  lib.rs  panic.rs  skifio.rs
source/mcu/user/src/channel/: mod.rs  tcp.rs
source/mcu/user/src/channel/rpmsg/: message.rs  mod.rs  wrapper.rs
source/mcu/user/src/emul/: channel.rs  io.rs  mod.rs  skifio.rs
source/mcu/user/src/real/: alloc.rs  channel.rs  hal.rs  io.rs  mod.rs  panic.rs
source/mcu/user/src/real/channel/: bytes.rs  message.rs  mod.rs  raw.rs  wrapper.rs
source/mcu/user/src/real/skifio/: raw.rs  wrapper.rs
source/mcu/user/src/skifio/: emul.rs  mod.rs
source/mcu/user/src/skifio/real/: mod.rs  raw.rs  wrapper.rs
source/mcu/user/src/tasks/: control.rs  mod.rs  rpmsg.rs  stats.rs
source/mcu/user/src/wf/: mod.rs  real.rs
source/test/fakedev/: Cargo.toml
source/test/fakedev/src/: dummy.rs  epics.rs  skifio.rs  test.rs
source/test/fakedev/src/testing/: adc.rs  dac.rs  dio.rs  mod.rs
tornado/: config.py  config.pyi  ipp.py  manage.py
tornado/ci/gitlab/: generate.py
tornado/common/: config.py
tornado/components/: all_.py  app.py  config.py  fakedev.py  freertos.py  ioc.py  ipp.py  mcu.py  toolchains.py  tree.py
tornado/components/epics/: app_ioc.py
tornado/fakedev/: base.py  dummy.py  test.py
tornado/ioc/fakedev/: base.py  base.pyi  dummy.py  test.py
tornado/ipp/: __init__.py  __init__.pyi
tornado/manage/: __main__.py  info.py  tree.py
tornado/tasks/: all.py  app.py  fakedev.py  freertos.py  ioc.py  mcu.py  toolchains.py  tree.py
tornado/tasks/app/: all.py  base.py  ioc.py  plugin.py  user.py
