[tool.poetry]
name = "tornado"
version = "0.0.0"
description = "Tornado power supply controller"
authors = ["Alexey Gerasev <a.v.gerasyov@inp.nsk.su>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ferrite = { path = "ferrite", develop = true }

[tool.poetry.dev-dependencies]
toml = "^0.10.2"
yapf = "^0.32.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "yapf"
column_limit = 128
indent_width = 4
continuation_indent_width = 4
continuation_align_style = "space"
dedent_closing_brackets = true
coalesce_brackets = true

[tool.mypy]
strict = true
namespace_packages = true
