[tool.poetry]
name = "tornado"
version = "0.0.0"
description = "Tornado power supply controller"
authors = ["Alexey Gerasev <a.v.gerasyov@inp.nsk.su>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
vortex = { path = "vortex", develop = true }

[tool.poetry.dev-dependencies]
toml = "^0.10.2"
mypy = "^0.942"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-width = 128

[tool.mypy]
mypy_path = "vortex"
strict = true
namespace_packages = true
