[package]
name = "tornado-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "app"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ferrite = { package = "ferrite-core", path = "../ferrite" }
futures = { version = "0.3.23", features = ["thread-pool"] }
async-std = "1.6.4"
flatty = "0.1.0-alpha.3"
macro_rules_attribute = "0.1.2"
async-ringbuf = "0.1.0"
stavec = "0.2.0-rc.2"
log = "0.4"
env_logger = "0.9.1"

[features]
default = ["tcp"]
rpmsg = []
tcp = []
