[package]
name = "tornado-app"
version = "0.0.0"
edition = "2021"

[lib]
name = "app"
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
#lto = true

[features]
default = ["real"]
real = ["rpmsg", "common/real"]
fake = ["tcp", "common/fake"]
rpmsg = ["termios"]
tcp = []

[dependencies]
ferrite = { package = "ferrite-core", path = "../ferrite" }
futures = "0.3.23"
tokio = { version = "1.27.0", features = [
    "rt-multi-thread",
    "net",
    "time",
    "sync",
] }
async-compat = "0.2.1"
flatty = { path = "../../common/flatty" }
flatty-io = { path = "../../common/flatty/io" }
macro_rules_attribute = "0.1.2"
ringbuf = { path = "../../common/ringbuf" }
async-ringbuf = { path = "../../common/ringbuf/async" }
log = "0.4"
env_logger = "0.9.1"
thiserror = "1.0.38"
pin-project = "1.0.12"
libc = "0.2.139"
termios = { version = "0.3.3", optional = true }
async-atomic = "0.1.2"
derive_more = "0.99.17"

[dependencies.common]
package = "tornado-common"
path = "../../common/user"
features = ["app"]
