[package]
name = "tornado-mcu"
version = "0.0.0"
edition = "2021"

[lib]
name = "user"
crate-type = ["staticlib", "lib"]

[profile.release]
lto = true
#opt-level = "z"

[features]
default = ["fake"]
real = ["ustd/backend-freertos", "lazy_static/spin_no_std"]
fake = [
    "common/fake",
    "ustd/backend-std",
    "ringbuf-blocking",
    "flatty-io",
    "flatty/std",
    "timeout-readwrite",
]
panic = ["ustd/panic"]

[dependencies]
lazy_static = { version = "1.4.0" }
ringbuf = { path = "../ringbuf", default-features = false }
libm = "0.2.7"
flatty = { path = "../../common/flatty", default-features = false }
flatty-io = { path = "../../common/flatty/io", optional = true }
timeout-readwrite = { version = "0.3.3", optional = true }
indenter = "0.3.3"
ringbuf-blocking = { path = "../ringbuf/blocking", optional = true }

[dependencies.derive_more]
version = "0.99.17"
default-features = false
features = ["from", "deref", "deref_mut"]

[dependencies.ustd]
path = "../ustd"
default-features = false

[dependencies.common]
package = "tornado-common"
path = "../../common/user"
