[package]
name = "tornado-fakedev"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fakedev"
path = "src/lib.rs"

[[bin]]
name = "run"
path = "src/dummy.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
futures = { version = "0.3.26" }
async-std = { version = "1.12.0", features = ["attributes"] }
epics-ca = { path = "../ca" }
approx = "0.5.1"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
indicatif = "0.17.3"

[dependencies.common]
package = "tornado-common"
path = "../../common/user"
features = ["app"]

[dependencies.mcu]
package = "tornado-mcu"
path = "../../mcu/user"
default-features = false
features = ["fake"]

[dependencies.ustd]
path = "../../mcu/ustd"
default-features = false
features = ["backend-std"]
